# algorithm_challenge

./: .gitignore  README.md  pyproject.toml  setup.cfg
algorithm_challenge/: __init__.py  algorithm_challenge.py
tests/unit_tests/: test_algorithm_challenge.py
