[tool.poetry]
name = "algorithm_challenge"
version = "0.0.1"
description = "Algorithm challenge for Delfi Diagnostics"
authors = ["Nicole Carter"]
include = ["README.rst", "setup.cfg"]

[tool.poetry.dependencies]
python = ">=3.9,<4"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = ">=5.5"}
flake8 = ">=3.8.4"
flake8-blind-except = ">=0.2.0"
flake8-bugbear = ">=21.3.1"
flake8-builtins = ">=1.5.3"
flake8-comprehensions = ">=3.3.1"
flake8-docstrings = ">=1.5.0"
flake8-mutable = ">=1.2.0"
flake8-rst-docstrings = ">=0.0.14"
flake8-commas = ">=2.0.0"
mypy = ">=0.812"
mypy-extensions = ">=0.4.3"
pytest = ">=6.2.2"
pytest-cache = ">=1.0"
pytest-cov = ">=2.11.1"
pytest-flake8 = ">=1.0.7"
pytest-html = ">=3.1.1"
pytest-mypy = ">=0.8.0"
pytest-xdist = ">=2.2.1"

[tool.coverage.run]
branch = true
source = ["algorithm_challenge"]
parallel = true

[build-system]
requires = ["poetry>=1.1.4", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
